Fixed a glitch in the education card rendering on mobile

--- a/web/cards/education.scss
+++ b/web/cards/education.scss
@@ -1,1 +1,5 @@
 @import "packages/about_me/theme";
+
+.position {
+  display: inline-block;
+}
